Use Greyko's date and time, as RPI looses track of time

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 
         Highcharts.setOptions({
             global: {
-                useUTC: false
+                useUTC: true
             }
         });
 
