Adding labels to the values

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         var dataPointsTset = [];
         var dataPointsTboiler = [];
         var dataPointsFFWorkTime = [];
-	var dataPointsDHW = [];
+		var dataPointsDHW = [];
 
 //        Highcharts.setOptions({
 //            global: {
@@ -253,19 +253,19 @@
                             <div class="panel-body">
                                 <div class="row">
                                     <div class="col">
-                                        <button type="button" class="btn btn-default btn-md btn-block" style="text-align:left; padding-left:20px"><span class="glyphicon glyphicon-fire"></span> <span id="spFlame" style="padding-left:10px"> </span></button>
+                                        <button type="button" class="btn btn-default btn-md btn-block" style="text-align:left; padding-left:20px"><span class="glyphicon glyphicon-fire"></span>Flame: <span id="spFlame" style="padding-left:10px"> </span></button>
                                     </div>
 				    <div class="col">
-                                        <button type="button" class="btn btn-default btn-md btn-block" style="text-align:left; padding-left:20px"><span class="glyphicon glyphicon-fire"></span> <span id="spTBoiler" style="padding-left:10px"></span></button>
+                                        <button type="button" class="btn btn-default btn-md btn-block" style="text-align:left; padding-left:20px"><span class="glyphicon glyphicon-fire"></span>TBoiler:  <span id="spTBoiler" style="padding-left:10px"></span></button>
                                     </div>
                                     <div class="col">
-                                        <button type="button" class="btn btn-default btn-md btn-block" style="text-align:left; padding-left:20px"><span class="glyphicon glyphicon-signal"></span> <span id="spPower" style="padding-left:10px"> </span></button>
+                                        <button type="button" class="btn btn-default btn-md btn-block" style="text-align:left; padding-left:20px"><span class="glyphicon glyphicon-signal"></span>Power: <span id="spPower" style="padding-left:10px"> </span></button>
                                     </div>
 			    	    <div class="col">
-					<button type="button" class="btn btn-default btn-md btn-block" style="text-align:left; padding-left:20px"><span class="glyphicon glyphicon-fire"></span> <span id="spTDHW" style="padding-left:10"></span></button>
+					<button type="button" class="btn btn-default btn-md btn-block" style="text-align:left; padding-left:20px"><span class="glyphicon glyphicon-fire"></span>TDHW: <span id="spTDHW" style="padding-left:10"></span></button>
 				    </div>
                                     <div class="col">
-                                        <button type="button" class="btn btn-default btn-md btn-block" style="text-align:left; padding-left:20px"><span class="glyphicon glyphicon-scale"></span> <span id="spConsumption" style="padding-left:10px">0.00 kg / 24h</span></button>
+                                        <button type="button" class="btn btn-default btn-md btn-block" style="text-align:left; padding-left:20px"><span class="glyphicon glyphicon-scale">Consumption: </span> <span id="spConsumption" style="padding-left:10px">0.00 kg / 24h</span></button>
                                     </div>
                                 </div>
                             </div>
